Fix section margin spacing

--- a/app/js/components/grid/section/section.css
+++ b/app/js/components/grid/section/section.css
@@ -2,7 +2,7 @@
 @import 'css/base/variables.css';
 
 .section{
-  margin: var(--large-padding) 0;
+  margin: calc(var(--large-padding) * 2) 0;
 
   &__header{
     position: relative;
